5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1582_1332.log
== TEST (2019-03-31 14:40:57) 
-- CODE:
aresta = 5
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:41:59) 
-- CODE:
aresta = 5
area = 5**6
 
print(round(area, 4))
-- OUTPUT:
15625
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:42:02) 
-- CODE:
aresta = 5
area = 5**6
 
print(round(area, 4))
-- EXECUTION TIME:
0.153396
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
15625
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:42:22) 
-- CODE:
aresta = 5
area = 4
 
print(round(area, 4))
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:42:24) 
-- CODE:
aresta = 5
area = 4
 
print(round(area, 4))
-- EXECUTION TIME:
0.132035
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:42:47) 
-- CODE:
aresta = 5
area = 5**6
 
print(round(area, 4))
-- OUTPUT:
15625
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:45:11) 
-- CODE:
aresta = 5
area = 5**6
 
print(round(area, 4,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4,5))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:45:22) 
-- CODE:
aresta = 5
area = 5**6
 
print(round(area, 4,5))
-- EXECUTION TIME:
0.201277
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 4, in <module>
    print(round(area, 4,5))
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:46:36) 
-- CODE:
aresta = 5
area = 5**6

print(round(area, 4,))
-- OUTPUT:
15625
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:46:43) 
-- CODE:
aresta = 5
area = 5*6

print(round(area, 4,))
-- EXECUTION TIME:
0.146778
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
30
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:46:43) 
-- CODE:
aresta = 5
area = 5*6

print(round(area, 4,))
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:47:23) 
-- CODE:
aresta = 5
area = 5**6
print(5**6)
print(round(area, 4,))
-- OUTPUT:
15625
15625
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:47:26) 
-- CODE:
aresta = 5
area = 5**6
print(5**6)
print(round(area, 4,))
-- EXECUTION TIME:
0.121148
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
15625
15625
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:47:42) 
-- CODE:
aresta = 5
area = 5**6
print(5**6)
print(round(area, 4,5**6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4,5**6))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:47:51) 
-- CODE:
aresta = 5
area = 5**6

print(round(area, 4,5**6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4,5**6))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:48:17) 
-- CODE:
aresta = 5
area = 5**6

print(round(area, 4,))
-- OUTPUT:
15625
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:48:45) 
-- CODE:
aresta = 5
area = 5**6
x=15625
print(round(area, 4,x))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4,x))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:49:19) 
-- CODE:
aresta = 5
area = 5**6
x=15625
print(round(area, 4))
-- OUTPUT:
15625
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:49:24) 
-- CODE:
aresta = 5
area = 5**6
x=15625
print(round(area, 4))
-- EXECUTION TIME:
0.17664
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
15625
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:44:25) 
-- CODE:
from math import *
a = int(input("valor de a:"))
A = 3/2sqrt(3*a**2)
print(round(A,4))
-- ERROR:
File "XXXX", line 3
    A = 3/2sqrt(3*a**2)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:45:12) 
-- CODE:
from math import *
a = int(input("valor de a:"))
A = 3/2*3*0.5a**2
print(round(A,4))
-- ERROR:
File "XXXX", line 3
    A = 3/2*3*0.5a**2
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:45:18) 
-- CODE:
from math import *
a = int(input("valor de a:"))
A = 3/2*3*0.5a**2
print(round(A,4))
-- ERROR:
File "XXXX", line 3
    A = 3/2*3*0.5a**2
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:47:25) 
-- CODE:
from math import *
a = int(input("valor de a:"))
A = 3/2(3*a**2)*0.5
print(round(A,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:48:19) 
-- CODE:
from math import *
a = int(input("valor de a:"))
A = 3/2*((3*a**2)*0.5)
print(round(A,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:48:27) 
-- CODE:
from math import *
a = int(input("valor de a:"))
A = 3/2*((3*a**2)*0.5)
print(round(A,4))
-- EXECUTION TIME:
0.120864
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 2, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:48:55) 
-- CODE:
from math import *
a = int(input("valor de a:"))
A = 3/2*((3*a**2)**0.5)
print(round(A,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:48:55) 
-- CODE:
from math import *
a = int(input("valor de a:"))
A = 3/2*((3*a**2)**0.5)
print(round(A,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:48:57) 
-- CODE:
from math import *
a = int(input("valor de a:"))
A = 3/2*((3*a**2)**0.5)
print(round(A,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:48:57) 
-- CODE:
from math import *
a = int(input("valor de a:"))
A = 3/2*((3*a**2)**0.5)
print(round(A,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:48:57) 
-- CODE:
from math import *
a = int(input("valor de a:"))
A = 3/2*((3*a**2)**0.5)
print(round(A,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:49:12) 
-- CODE:
from math import *
a = int(input("valor de a:"))
A = 3/2*((3*a**2)**0.5)
print(round(A,4))
-- EXECUTION TIME:
0.173425
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 2, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:49:36) 
-- CODE:
a = int(input("valor de a:"))
A = 3/2*((3*a**2)**0.5)
print(round(A,4))
-- EXECUTION TIME:
0.285278
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:49:40) 
-- CODE:
a = int(input("valor de a:"))
A = 3/2*((3*a**2)**0.5)
print(round(A,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:49:47) 
-- CODE:
a = int(input("valor de a:"))
A = 3/2*((3*a**2)**0.5)
print(round(A,4))
-- EXECUTION TIME:
0.151416
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:51:00) 
-- CODE:
a = float(input("valor de a:"))
A = 3/2*((3*a**2)**0.5)
print(round(A,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(input())
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:57:39) 
-- CODE:
a = input("valor de a:")
A = 3/2*(3**0.5)a**2
print(round(A,4))
-- EXECUTION TIME:
0.23143
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 2
    A = 3/2*(3**0.5)a**2
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:57:48) 
-- CODE:
a = input("valor de a:")
A = 3/2*(3**0.5)a**2
print(round(A,4))
-- ERROR:
File "XXXX", line 2
    A = 3/2*(3**0.5)a**2
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:57:58) 
-- CODE:
a = input("valor de a:")
A = 3/2*(3**0.5)*a**25
print(round(A,4))
-- EXECUTION TIME:
0.169992
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 2, in <module>
    A = 3/2*(3**0.5)*a**25
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:58:05) 
-- CODE:
a = input("valor de a:")
A = 3/2*(3**0.5)*a**2
print(round(A,4))
-- EXECUTION TIME:
0.233214
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 2, in <module>
    A = 3/2*(3**0.5)*a**2
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:58:34) 
-- CODE:
a = input("valor de a:")
A = (3/2)*(3**0.5)*a**2
print(round(A,4))
-- EXECUTION TIME:
0.150355
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 2, in <module>
    A = (3/2)*(3**0.5)*a**2
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:58:46) 
-- CODE:
a = input("valor de a:")
A = (3/2)*((3)**0.5)*a**2
print(round(A,4))
-- EXECUTION TIME:
0.21498
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 2, in <module>
    A = (3/2)*((3)**0.5)*a**2
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:59:06) 
-- CODE:
a = int(input("valor de a:"))
A = (3/2)*((3)**0.5)*a**2
print(round(A,4))
-- EXECUTION TIME:
0.165686
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:59:44) 
-- CODE:
a = int(input("valor de a:"))
A = 3/2*3**0.5*a**2
print(round(A,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:59:51) 
-- CODE:
a = int(input("valor de a:"))
A = 3/2*3**0.5*a**2
print(round(A,4))
-- EXECUTION TIME:
0.232048
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:00:32) 
-- CODE:
a = int(input("valor de a:"))
A = 3/2*3**0.5*(a**2)
print(round(A,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:00:36) 
-- CODE:
a = int(input("valor de a:"))
A = 3/2*3**0.5*(a**2)
print(round(A,4))
-- EXECUTION TIME:
0.1128
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:05:08) 
-- CODE:
a = 5
A = 3/2*((3*a**2)**0.5)
print(round(r,4))
-- EXECUTION TIME:
0.150812
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 3, in <module>
    print(round(r,4))
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:05:35) 
-- CODE:
a = 5
A = 3/2*(3)**0.5*a**2
print(round(r,4))
-- EXECUTION TIME:
0.129096
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 3, in <module>
    print(round(r,4))
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:05:36) 
-- CODE:
a = 5
A = 3/2*(3)**0.5*a**2
print(round(r,4))
-- EXECUTION TIME:
0.1632
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 3, in <module>
    print(round(r,4))
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:05:36) 
-- CODE:
a = 5
A = 3/2*(3)**0.5*a**2
print(round(r,4))
-- EXECUTION TIME:
0.129358
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 3, in <module>
    print(round(r,4))
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:05:36) 
-- CODE:
a = 5
A = 3/2*(3)**0.5*a**2
print(round(r,4))
-- EXECUTION TIME:
0.104499
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 3, in <module>
    print(round(r,4))
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:05:36) 
-- CODE:
a = 5
A = 3/2*(3)**0.5*a**2
print(round(r,4))
-- EXECUTION TIME:
0.0966048
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 3, in <module>
    print(round(r,4))
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:05:37) 
-- CODE:
a = 5
A = 3/2*(3)**0.5*a**2
print(round(r,4))
-- EXECUTION TIME:
0.0978251
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 3, in <module>
    print(round(r,4))
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:05:37) 
-- CODE:
a = 5
A = 3/2*(3)**0.5*a**2
print(round(r,4))
-- EXECUTION TIME:
0.111401
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 3, in <module>
    print(round(r,4))
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:05:37) 
-- CODE:
a = 5
A = 3/2*(3)**0.5*a**2
print(round(r,4))
-- EXECUTION TIME:
0.106048
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 3, in <module>
    print(round(r,4))
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:05:42) 
-- CODE:
a = 5
A = 3/2*3**0.5*a**2
print(round(r,4))
-- EXECUTION TIME:
0.129569
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 3, in <module>
    print(round(r,4))
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:05:44) 
-- CODE:
a = 5
A = 3/2*3**0.5*a**2
print(round(r,4))
-- EXECUTION TIME:
0.137299
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 3, in <module>
    print(round(r,4))
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:05:51) 
-- CODE:
a = 5
A = 3/2*(3**0.5*)a**2
print(round(r,4))
-- EXECUTION TIME:
0.200857
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 2
    A = 3/2*(3**0.5*)a**2
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:11:23) 
-- CODE:
a = 5
A = 3/2*3**0.5*a**2
print(round(r,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(r,4))
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:11:23) 
-- CODE:
a = 5
A = 3/2*3**0.5*a**2
print(round(r,4))
-- EXECUTION TIME:
0.115501
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 3, in <module>
    print(round(r,4))
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:11:39) 
-- CODE:
a = 5
A = 3/2*3**0.5*a**2
print(round(r,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(r,4))
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:12:34) 
-- CODE:
a = 5
print(round( 3/2*3**0.5*a**2))
-- OUTPUT:
65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:12:45) 
-- CODE:
a = 5
print(round( 3/2*3**0.5*a**2,4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:13:02) 
-- CODE:
print(round( 3/2*3**0.5*a**2, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round( 3/2*3**0.5*a**2, 4))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:13:15) 
-- CODE:
print(round( 3/2*3**0.5*5**2,4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:13:17) 
-- CODE:
print(round( 3/2*3**0.5*5**2,4))
-- EXECUTION TIME:
0.155173
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:17:13) 
-- CODE:
print(round(2/3))3**2*5
-- ERROR:
File "XXXX", line 1
    print(round(2/3))3**2*5
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:19:26) 
-- CODE:
print(round(3/2*3**0.5**2
-- ERROR:
File "XXXX", line 2
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:19:51) 
-- CODE:
print(round(3/2*3**0.5**5*2
-- ERROR:
File "XXXX", line 2
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:20:38) 
-- CODE:
print(round(3/2*3**0.5*5**2
-- ERROR:
File "XXXX", line 2
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:20:57) 
-- CODE:
print(round(3/2*3**0.5*5**2))
-- OUTPUT:
65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:21:02) 
-- CODE:
print(round(3/2*3**0.5*5**2))
-- EXECUTION TIME:
0.165981
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:22:09) 
-- CODE:
print(round(3/2*3**0.5*5**2,4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:22:12) 
-- CODE:
print(round(3/2*3**0.5*5**2,4))
-- EXECUTION TIME:
0.149205
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:24:24) 
-- CODE:
print(round(3/2*2**5*5,4)
-- ERROR:
File "XXXX", line 2
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:24:47) 
-- CODE:
print(round(3/2*2**0.5*5,4)
-- ERROR:
File "XXXX", line 2
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:25:02) 
-- CODE:
print(round(3/2*2**0.5,4)
-- ERROR:
File "XXXX", line 2
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:25:48) 
-- CODE:
print(round(3/2*3*0.5*5,4)
-- ERROR:
File "XXXX", line 2
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:25:56) 
-- CODE:
print(round(3/2*3*0.5*,4)
-- ERROR:
File "XXXX", line 1
    print(round(3/2*3*0.5*,4)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:26:10) 
-- CODE:
print(round(3/2*3*0.5*,4))
-- ERROR:
File "XXXX", line 1
    print(round(3/2*3*0.5*,4))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:26:17) 
-- CODE:
print(round(3/2*3*0.5*5,4))
-- OUTPUT:
11.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:26:31) 
-- CODE:
print(round(3/2*3**0.5*5,4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:26:34) 
-- CODE:
print(round(3/2*3**0.5*5,4))
-- EXECUTION TIME:
0.156611
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:26:43) 
-- CODE:
print(round(3/2*3**0.5*5,4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:26:50) 
-- CODE:
print(round(3/2*3**0.5*5,4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:26:52) 
-- CODE:
print(round(3/2*3**0.5*5,4))
-- EXECUTION TIME:
0.199775
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:26:56) 
-- CODE:
print(round(3/2*3**0.5*5,4)
-- EXECUTION TIME:
0.17891
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 2
    
                               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:27:27) 
-- CODE:
print(round(3/2*3**0.5*,4))
-- ERROR:
File "XXXX", line 1
    print(round(3/2*3**0.5*,4))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:27:35) 
-- CODE:
print(round(3/2*3**0.5*5,4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:27:39) 
-- CODE:
print(round(3/2*3**0.5*5,4))
-- EXECUTION TIME:
0.106426
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:28:07) 
-- CODE:
print(round(3/2*3**0.5*5,4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:28:09) 
-- CODE:
print(round(3/2*3**0.5*5,4))
-- EXECUTION TIME:
0.19095
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:28:18) 
-- CODE:
print(round(3/2*3**0.5*5,4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:28:42) 
-- CODE:
print(round(3/2*3**0.5*5**2,4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:28:46) 
-- CODE:
print(round(3/2*3**0.5*5**2,4))
-- EXECUTION TIME:
0.125235
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
